--- a/api-print-local/src/main/resources/application.properties
+++ b/api-print-local/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 feign.ibge.name = urlIBGE
 feign.ibge.url = https://servicodados.ibge.gov.br/api/v1
+
+feign.hystrix.enabled = true
+
+pring.jackson.serialization.write_dates_as_timestamps=false
