Finalização do Handler Genérico de HTTP Request/Response

--- a/api-print-local/src/main/resources/application.properties
+++ b/api-print-local/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 feign.ibge.name = urlIBGE
 feign.ibge.url = https://servicodados.ibge.gov.br/api/v1
-
 feign.hystrix.enabled = true
 
-pring.jackson.serialization.write_dates_as_timestamps=false
+spring.jackson.serialization.write_dates_as_timestamps=false
+
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
